--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <title>Restoran M</title>
+    <meta name="title" content="Restoran M">
+    <meta name="description" content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i probajte najukusnije sarme, ćevape, pite...">
+    <meta name="keywords" content="restoran, hrana, beograd, novi sad, sarma, cevapi, pite, lepinje, jelovnik">
+    <meta name="author" content="Vukasin Marin">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="lightbox.css" />
     <link rel="stylesheet" href="dishes..css" />
