--- a/index.html
+++ b/index.html
@@ -67,54 +67,54 @@
         <div class="left">
           <div class="menu-item">
             <h4>
-              Jagnjetina u mleku <img src="./img/line.png" alt="" /> 2000 RSD
+              Jagnjetina u mleku <img src="./img/line.png" alt="jagnjetina" /> 2000 RSD
             </h4>
             <p class="details">Jagnjetina, povrće, slanina.</p>
           </div>
           <div class="menu-item">
             <h4>
-              Leskovačka pljeskavica <img src="./img/line.png" alt="" /> 700 RSD
+              Leskovačka pljeskavica <img src="./img/line.png" alt="pljeskavica" /> 700 RSD
             </h4>
             <p class="details">Juneće meso, lepinja, ajvar.</p>
           </div>
           <div class="menu-item">
-            <h4>Komplet lepinja <img src="./img/line.png" alt="" /> 600 RSD</h4>
+            <h4>Komplet lepinja <img src="./img/line.png" alt="komplet lepinja" /> 600 RSD</h4>
             <p class="details">Lepinja, moča, jogurt.</p>
           </div>
           <div class="menu-item">
-            <h4>Čobanska pita <img src="./img/line.png" alt="" /> 1200 RSD</h4>
+            <h4>Čobanska pita <img src="./img/line.png" alt="pita" /> 1200 RSD</h4>
             <p class="details">Mleveno meso, sir, krompir.</p>
           </div>
         </div>
         <div class="right">
           <div class="menu-item">
-            <h4>Sarma <img src="./img/line.png" alt="" /> 1500 RSD</h4>
+            <h4>Sarma <img src="./img/line.png" alt="sarma" /> 1500 RSD</h4>
             <p class="details">Mleveno meso, kupus.</p>
           </div>
           <div class="menu-item">
             <h4>
-              Punjene paprike <img src="./img/line.png" alt="" /> 1300 RSD
+              Punjene paprike <img src="./img/line.png" alt="punjene paprike" /> 1300 RSD
             </h4>
             <p class="details">Mleveno meso, paprika.</p>
           </div>
           <div class="menu-item">
-            <h4>Ćevapi <img src="./img/line.png" alt="" /> 500 RSD</h4>
+            <h4>Ćevapi <img src="./img/line.png" alt="cevapi" /> 500 RSD</h4>
             <p class="details">Junetina, lepinja</p>
           </div>
           <div class="menu-item">
-            <h4>Gibanica <img src="./img/line.png" alt="" /> 700 RSD</h4>
+            <h4>Gibanica <img src="./img/line.png" alt="gibanica" /> 700 RSD</h4>
             <p class="details">Pita sa sirom</p>
           </div>
         </div>
       </div>
       <div class="dropdown-button">
         <button class="trigger">
-          Pogledaj ceo jelovnik | <img src="./img/arrow.png" alt="" />
+          Pogledaj ceo jelovnik | <img src="./img/arrow.png" alt="jelovnik" />
         </button>
       </div>
     </section>
     <section id="dishes">
-      <h2>Naša preporuka <img src="./img/line.png" alt="" /></h2>
+      <h2>Naša preporuka <img src="./img/line.png" alt="preporuka" /></h2>
       <div class="product-container">
         <div class="product-card">
           <div class="product-image">
