--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v21.0"></script>
       <div class="fb-share-button" data-href="https://marinwb.github.io/restoran/" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmarinwb.github.io%2Frestoran%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+      <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fmarinwb.github.io%2Frestoran%2F&layout&size&width=77&height=20&appId" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
       <h3>Jelovnik</h3>
       <div class="menu-list">
         <div class="left">
