--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="description" content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i probajte najukusnije sarme, ćevape, pite...">
     <meta name="keywords" content="restoran, hrana, beograd, novi sad, sarma, cevapi, pite, lepinje, jelovnik">
     <meta name="author" content="Vukasin Marin">
+    <meta property="og:url"           content="https://https://marinwb.github.io/restoran/" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Restoran M" />
+    <meta property="og:description"   content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i probajte najukusnije sarme, ćevape, pite..." />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="lightbox.css" />
     <link rel="stylesheet" href="dishes..css" />
