--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Restoran M" />
     <meta property="og:description"   content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i probajte najukusnije sarme, ćevape, pite..." />
+    <meta property="og:image"         content="https://marinwb.github.io/restoran/img/img4.png" />
+
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="lightbox.css" />
     <link rel="stylesheet" href="dishes..css" />
