--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
-    <title>Restoran M</title>
-    <meta name="title" content="Restoran M">
-    <meta name="description" content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i probajte najukusnije sarme, ćevape, pite...">
-    <meta name="keywords" content="restoran, hrana, beograd, novi sad, sarma, cevapi, pite, lepinje, jelovnik">
+    <title>Restoran M - po vasem ukusu</title>
+    <meta name="title" content="Restoran M - po vasem ukusu">
+    <meta name="description" content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i uzivajte u prelepom ambijentu i najukusnijim lepinjama, jagnjetini, sarmama, pitama i drugim specijalitetima našeg jelovnika">
+    <meta name="keywords" content="restoran, hrana, lepinja, jelovnik, meso, jagnjetinabeograd, novi sad, sarma, cevapi, pite, ">
     <meta name="author" content="Vukasin Marin">
     <meta property="og:url"           content="https://https://marinwb.github.io/restoran/" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Restoran M" />
-    <meta property="og:description"   content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i probajte najukusnije sarme, ćevape, pite..." />
+    <meta property="og:title"         content="Restoran M - po vasem ukusu" />
+    <meta property="og:description"   content="Restoran M je restoran sa najboljom domaćom hranom u Beogradu i Novom Sadu. Posetite nas i uzivajte u prelepom ambijentu i najukusnijim sarmama, ćevapima, pitama i drugim specijalitetima" />
     <meta property="og:image"         content="https://marinwb.github.io/restoran/img/img4.png" />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
